--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -21,9 +21,9 @@
         tools:layout="@layout/fragment_maps" />
     <fragment
         android:id="@+id/memberShipFragment"
-        android:name="com.oman.sayakil.ui.fragments.MemberShipFragment"
+        android:name="com.oman.sayakil.ui.activities.MemberShipActivity"
         android:label="fragment_member_ship"
-        tools:layout="@layout/fragment_member_ship" />
+        tools:layout="@layout/activity_member_ship" />
     <fragment
         android:id="@+id/paymentInformationFragment"
         android:name="com.oman.sayakil.ui.activities.PaymentInformationActivity"
