--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -10,7 +10,7 @@
             android:icon="@drawable/ic_person"
             android:title="@string/menu_profile" />
         <item
-            android:id="@+id/nav_email"
+            android:id="@+id/nav_notification"
             android:icon="@drawable/ic_baseline_message_24"
             android:title="@string/menu_email" />
         <item
